--- a/src/components/Button/button.scss
+++ b/src/components/Button/button.scss
@@ -1,10 +1,14 @@
 .button {
   width: fit-content;
+  height: fit-content;
   padding: 10px;
   color: blue;
-  border: 1px solid blue;
-  border-radius: 3px;
   cursor: pointer;
+
+  &:not(.without-border) {
+    border: 1px solid blue;
+    border-radius: 3px;
+  }
 }
 
 .delete-button {
