--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,17 +1,34 @@
 .header {
-  height: 60px;
   background-color: #fff;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 15px;
   position: sticky;
   top: 0;
-  .add-article {
-    color: #909090;
-    cursor: pointer;
+
+  .logo-btn-container {
+    height: 100%;
+    align-items: center;
+    .logo {
+      cursor: pointer;
+      font-weight: 600;
+      margin-right: 8px;
+      display: flex;
+      align-items: center;
+      padding: 15px;
+
+      &:hover {
+        background-color: #f1f1f1;
+      }
+    }
+    .add-article {
+      color: #909090;
+      cursor: pointer;
+      margin-left: 8px;
+    }
   }
   &__search {
     cursor: pointer;
+    margin-right: 15px;
   }
 }
